# flitsr

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  average  calc_experiments.py  clean  cutoff_points.py  delete  distro  distro.py  eval_framework_driver.py  feedback  feedback_loc.py  file.py  find_unex.py  flitsr  flitsr.py  get_metric_names.py  identify.py  improve  info  info.py  input.py  localize.py  merge  merge.py  merge_equiv.py  merge_rndm  merge_rndm.py  move  old_merge.py  parallel.py  percent_at_n  percent_at_n.py  perms.py  plot  plot.py  ppimprove  ppimprove.py  (+16 more)
.github/workflows/: python-publish.yml  python-test.yml
docs/: Makefile  requirements.txt
docs/source/: adv_type_ext.rst  adv_types.rst  api.rst  base_tool.rst  calc_ext.rst  conf.py  driver.rst  eval_framework.rst  example_spectrum.rst  flitsr_plugins.rst  index.rst  input_ext.rst  input_types.rst  install.md  install.rst  merging.rst  plotting.rst  read_ranking.rst  test.md  transform.rst  usage.rst
docs/source/_templates/: custom-class-template.rst
flitsr/: __init__.py  __main__.py  advanced_types.py  args.py  artemis_wrapper.py  const_iter.py  cutoff_points.py  distro.py  errors.py  file.py  flitsr.py  flitsr_types.py  get_metric_names.py  gui.py  gzoltar_to_tcm.py  input.py  input_type.py  localize.py  main.py  merge.py  mutate_wrapper.py  ordering_driver.py  output.py  parallel.py  percent_at_n.py  plot.py  precision_recall.py  ranking.py  read_ranking.py  reduce.py  run_all.py  score.py  spectrum.py  spectrumBuilder.py  split_faults.py  stmt_to_method.py  suspicious.py  tcm_input.py  tie.py  top.py  (+2 more)
flitsr/advanced/: __init__.py  artemis_wrapper.py  attributes.py  cluster.py  flitsr.py  parallel.py  ranker.py  refiner.py  sbfl.py  sliced.py
flitsr/advanced/artemis_impl/: artemis.py
flitsr/calculations/: __init__.py  bu_model.py  calc_decorator.py  exam.py  exp_values.py  fault_stats.py  mar_mfr.py  output.py  percent_at_n.py  perms.py  precision_recall.py  top.py  weffort.py
flitsr/input/: __init__.py  duplicates.py  gzoltar_input.py  input_reader.py  spectrumBuilder.py  split_faults.py  tcm_input.py
flitsr/universalmutator/: analyze.py  findmissing.py  genmutants.py  mutator.py  prioritize.py  prune.py  server.py  show.py
src/: __init__.py  cutoff_points.py  flitsr.py  merge.py  parallel.py  ranking.py  suspicious.py
tests/: __init__.py  gzoltar_input_test.py  helper.py  input_test.py  suspicious_test.py  tcm_input_test.py  test_param_parser.py  test_suspicious.py  tie_test.py
tests/input/: group_construction_test.py
tests/resources/: parameter_parser_routines.py
(+4 files in other folders)
