[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flitsr"
version = "1.1.0"
authors = [
  {name="Dylan Callaghan", email="dcallaghan@acm.org"}
]
description="An automatic fault finding/localization tool for multiple faults"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/DCallaz/flitsr"
Issues = "https://github.com/DCallaz/flitsr/issues"

[scripts]
flitsr = "bin/flitsr"
merge = "bin/merge"
percent_at_n = "bin/percent_at_n"
run_all = "bin/run_all"
