[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flitsr"
version = "0.0.2"
authors = [
  {name="Dylan Callaghan", email="dcallaghan@acm.org"}
]
description="An automatic fault finding/localization tool for multiple faults"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  'argcomplete',
  'numpy',
  'bitarray',
  'scipy'
]

[project.urls]
Homepage = "https://github.com/DCallaz/flitsr"
Issues = "https://github.com/DCallaz/flitsr/issues"

[project.scripts]
flitsr = "flitsr.flitsr:main"
merge = "flitsr.merge:main"
percent_at_n = "flitsr.percent_at_n:main"
# run_all = "bin/run_all"

[tool.setuptools]
script-files = ["bin/run_all"]
